--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "devDependencies": {
     "sass": "^1.55.0",
     "vite": "^3.1.0"
+  },
+  "dependencies": {
+    "gsap": "npm:@gsap/shockingly@^3.11.3"
   }
 }
